# kastrel-bank-dashboard

./: .gitignore  AI_SUMMARY_IMPLEMENTATION.md  PERCH_SERVICE_API_CONTRACT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  config.py  main.py
app/dashboard/: __init__.py  auth.py  models.py  routes.py  websocket.py
app/demo/: __init__.py  local_data.py
app/services/: __init__.py  data_aggregator.py  perch_client.py
config/: dev.yaml  production.yaml
demo_data/: banking_churn_customers_1000.csv  banking_churn_documents_1000.csv
deployment/: Dockerfile  Dockerfile.perch-sim  docker-compose.yml
deployment/ami/: README.md  build.sh  delete_ami.sh  launch_ami.sh  manifest.json  packer.pkr.hcl
deployment/ami/files/: kastrel-config.sh  kastrel-dashboard.service
deployment/ami/scripts/: cleanup.sh  setup.sh
deployment/aws/: README.md  cloudformation.yaml  deploy.sh  ecs-task-definition.json
dev/: README.md  simulate_perch_with_model.py  simulate_perches.py  start_local.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-react/: index.html  package.json
frontend-react/src/: App.tsx
frontend-react/src/components/ui/: badge.tsx  card.tsx  checkbox.tsx  command.tsx  skeleton.tsx  tabs.tsx
frontend/src/: index.css
frontend/src/components/ui/: button.tsx  dialog.tsx  input.tsx  popover.tsx  scroll-area.tsx  separator.tsx  table.tsx  tooltip.tsx
frontend/static/css/: style.css
frontend/static/js/: dashboard.js
(+22 files in other folders)
