[project]
name = "kastrel-dashboard"
version = "0.1.0"
description = "Dashboard for Kastrel - extends Nest with visualization UI"
requires-python = ">=3.10"

[project.scripts]
kastrel-dashboard = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
